Create parser module